# spark-share-core

./: Cargo.toml  test
src/: error.rs  file.rs  key_manager.rs  lib.rs  resource.rs  util.rs
src/file/: size.rs
